// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Combine demo -- combine 1`] = `
.emotion-83 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-83 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-24 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-24:before,
.emotion-24:after {
  content: ' ';
  display: table;
}

.emotion-24:after {
  clear: both;
}

.emotion-24 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-18 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-18 .uc-fe-radio-styletype-default,
.emotion-18 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-default:last-child,
.emotion-18 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-18 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-18 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-6 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-6 > * {
  font-size: 12px;
}

.emotion-6 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-6 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-6 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-6:hover .uc-fe-radio-icon-wrap,
.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-6.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-6.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-39 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-39:hover {
  border-color: #3357df;
}

.emotion-39:hover .emotion-36 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-39 .emotion-36 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-39 .emotion-34 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-39 .emotion-38 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-39 .emotion-30,
.emotion-39 .emotion-32 {
  line-height: 16px;
}

.emotion-39 .emotion-30 {
  padding-right: 20px;
}

.emotion-39 .emotion-32 {
  padding-left: 20px;
}

.emotion-39 .emotion-30 {
  display: none;
}

.emotion-37 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-29 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-31 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-35 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-33 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-97 {
  position: relative;
}

.emotion-97 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.emotion-97 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 12px;
}

.emotion-97 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.emotion-97 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.emotion-91 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.emotion-89 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-89:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-86 {
  vertical-align: baseline;
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.emotion-95 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-95.uc-fe-input-block {
  display: block;
}

.emotion-95 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-95 input,
.emotion-95 input:hover,
.emotion-95 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-95:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-95 input {
  line-height: 26px;
  height: 26px;
}

.emotion-95 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-95 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-95 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-95 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-93 {
  display: table;
  width: 100%;
}

.emotion-83 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-83 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-24 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-24:before,
.emotion-24:after {
  content: ' ';
  display: table;
}

.emotion-24:after {
  clear: both;
}

.emotion-24 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-18 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-18 .uc-fe-radio-styletype-default,
.emotion-18 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-default:last-child,
.emotion-18 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-18 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-18 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-6 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-6 > * {
  font-size: 12px;
}

.emotion-6 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-6 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-6 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-6:hover .uc-fe-radio-icon-wrap,
.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-6.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-6.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-39 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-39:hover {
  border-color: #3357df;
}

.emotion-39:hover .emotion-36 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-39 .emotion-36 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-39 .emotion-34 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-39 .emotion-38 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-39 .emotion-30,
.emotion-39 .emotion-32 {
  line-height: 16px;
}

.emotion-39 .emotion-30 {
  padding-right: 20px;
}

.emotion-39 .emotion-32 {
  padding-left: 20px;
}

.emotion-39 .emotion-30 {
  display: none;
}

.emotion-37 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-29 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-31 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-35 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-33 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-97 {
  position: relative;
}

.emotion-97 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.emotion-97 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 12px;
}

.emotion-97 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.emotion-97 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.emotion-91 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.emotion-89 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-89:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-86 {
  vertical-align: baseline;
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.emotion-95 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-95.uc-fe-input-block {
  display: block;
}

.emotion-95 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-95 input,
.emotion-95 input:hover,
.emotion-95 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-95:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-95 input {
  line-height: 26px;
  height: 26px;
}

.emotion-95 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-95 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-95 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-95 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-93 {
  display: table;
  width: 100%;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-83 emotion-84"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class="emotion-18 emotion-72"
        >
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              sm
            </span>
          </span>
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              md
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              lg
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class=" emotion-39 emotion-40"
        >
          <div
            class="emotion-37 emotion-38"
          >
            <span
              class="emotion-29 emotion-30"
            >
              ON
            </span>
            <span
              class="emotion-31 emotion-32"
            >
              OFF
            </span>
            <span
              class="emotion-35 emotion-36"
            >
              <span
                class="emotion-33 emotion-34"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        spacing
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class="emotion-18 emotion-72"
        >
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              smart
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              compact
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              sm
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              md
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              lg
            </span>
          </span>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine emotion-97 emotion-98"
      spacing="md"
    >
      <div
        class="uc-fe-combine-controller emotion-91 emotion-92"
      >
        <div>
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-88 emotion-89 emotion-90"
            type="button"
          >
            <div>
              请选择
            </div>
            <i
              class="uc-fe-icon icon__down emotion-85 emotion-86 emotion-87"
            />
          </button>
        </div>
      </div>
      <span
        class="uc-fe-input uc-fe-combine-controller emotion-95 emotion-96"
      >
        <span
          class="emotion-93 emotion-94"
        >
          <input />
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Combine demo -- demo 1`] = `
.emotion-16 {
  position: relative;
}

.emotion-16 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.emotion-16 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 12px;
}

.emotion-16 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.emotion-16 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.emotion-6 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.emotion-4 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-4:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-1 {
  vertical-align: baseline;
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.emotion-10 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-10.uc-fe-input-block {
  display: block;
}

.emotion-10 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-10 input,
.emotion-10 input:hover,
.emotion-10 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-10:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-10 input {
  line-height: 26px;
  height: 26px;
}

.emotion-10 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-8 {
  display: table;
  width: 100%;
}

.emotion-12 {
  position: relative;
}

.emotion-12 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.emotion-12 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: -1px;
}

.emotion-12 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.emotion-12 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.emotion-14 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-14:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.emotion-20 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-20:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-24 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-24:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-24.emotion-24 {
  border-color: #d9d9d9;
  background: #f7f7f7;
  color: #cccccc;
  fill: #cccccc;
  cursor: default;
  border-width: 1px;
  border-style: solid;
  box-shadow: none;
}

.emotion-31 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
  padding-right: 8px;
}

.emotion-29 {
  vertical-align: baseline;
  cursor: pointer;
}

.emotion-37 {
  vertical-align: baseline;
}

.emotion-16 {
  position: relative;
}

.emotion-16 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.emotion-16 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 12px;
}

.emotion-16 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.emotion-16 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.emotion-6 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.emotion-4 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-4:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-1 {
  vertical-align: baseline;
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.emotion-10 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-10.uc-fe-input-block {
  display: block;
}

.emotion-10 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-10 input,
.emotion-10 input:hover,
.emotion-10 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-10:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-10 input {
  line-height: 26px;
  height: 26px;
}

.emotion-10 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-8 {
  display: table;
  width: 100%;
}

.emotion-12 {
  position: relative;
}

.emotion-12 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.emotion-12 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: -1px;
}

.emotion-12 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.emotion-12 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.emotion-14 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-14:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.emotion-20 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-20:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-24 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-24:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-24.emotion-24 {
  border-color: #d9d9d9;
  background: #f7f7f7;
  color: #cccccc;
  fill: #cccccc;
  cursor: default;
  border-width: 1px;
  border-style: solid;
  box-shadow: none;
}

.emotion-31 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
  padding-right: 8px;
}

.emotion-29 {
  vertical-align: baseline;
  cursor: pointer;
}

.emotion-37 {
  vertical-align: baseline;
}

<div>
  <h3>
    组合
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine emotion-16 emotion-13"
      spacing="md"
    >
      <div
        class="uc-fe-combine uc-fe-combine-controller emotion-12 emotion-13"
        spacing="compact"
      >
        <div
          class="uc-fe-combine-controller emotion-6 emotion-7"
        >
          <div>
            <button
              class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-3 emotion-4 emotion-5"
              type="button"
            >
              <div>
                请选择
              </div>
              <i
                class="uc-fe-icon icon__down emotion-0 emotion-1 emotion-2"
              />
            </button>
          </div>
        </div>
        <span
          class="uc-fe-input uc-fe-combine-controller emotion-10 emotion-11"
        >
          <span
            class="emotion-8 emotion-9"
          >
            <input />
          </span>
        </span>
      </div>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary uc-fe-combine-controller emotion-14 emotion-5"
        type="button"
      >
        按钮
      </button>
    </div>
  </div>
  <h3>
    按钮组
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine emotion-16 emotion-13"
      spacing="md"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary uc-fe-combine-controller emotion-14 emotion-5"
        type="button"
      >
        按钮组展示
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-combine-controller emotion-20 emotion-5"
        type="button"
      >
        按钮组展示
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-combine-controller emotion-20 emotion-5"
        type="button"
      >
        按钮组展示
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-button-disabled uc-fe-combine-controller emotion-24 emotion-5"
        disabled=""
        type="button"
      >
        按钮组展示
      </button>
    </div>
  </div>
  <h3>
    工具栏
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine emotion-16 emotion-13"
      spacing="md"
    >
      <span
        class="uc-fe-input uc-fe-combine-controller emotion-10 emotion-11"
      >
        <span
          class="emotion-8 emotion-9"
        >
          <input />
          <span
            class="emotion-31 emotion-32"
          >
            <i
              class="uc-fe-icon icon__search emotion-28 emotion-29 emotion-2"
            />
          </span>
        </span>
      </span>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-combine-controller emotion-20 emotion-5"
        type="button"
      >
        <i
          class="uc-fe-icon icon__repeat uc-fe-button-icon emotion-37 emotion-2"
        />
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-combine-controller emotion-20 emotion-5"
        type="button"
      >
        <i
          class="uc-fe-icon icon__cog uc-fe-button-icon emotion-37 emotion-2"
        />
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-combine-controller emotion-20 emotion-5"
        type="button"
      >
        <i
          class="uc-fe-icon icon__cloud-download uc-fe-button-icon emotion-37 emotion-2"
        />
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-combine-controller emotion-20 emotion-5"
        type="button"
      >
        按钮
      </button>
    </div>
  </div>
</div>
`;

exports[`Combine demo -- sharedProps 1`] = `
.emotion-26 {
  position: relative;
}

.emotion-26 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.emotion-26 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 12px;
}

.emotion-26 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.emotion-26 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.emotion-6 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.emotion-18 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-18:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-1 {
  vertical-align: baseline;
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.emotion-24 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-24.uc-fe-input-block {
  display: block;
}

.emotion-24 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-24 input,
.emotion-24 input:hover,
.emotion-24 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-24:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-24 input {
  line-height: 26px;
  height: 26px;
}

.emotion-24 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-24 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-24 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-24 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-8 {
  display: table;
  width: 100%;
}

.emotion-12 {
  position: relative;
}

.emotion-12 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.emotion-12 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 8px;
}

.emotion-12 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.emotion-12 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.emotion-4 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-4:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-10 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 24px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-10.uc-fe-input-block {
  display: block;
}

.emotion-10 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-10 input,
.emotion-10 input:hover,
.emotion-10 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-10:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-10 input {
  line-height: 22px;
  height: 22px;
}

.emotion-10 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-26 {
  position: relative;
}

.emotion-26 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.emotion-26 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 12px;
}

.emotion-26 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.emotion-26 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.emotion-6 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.emotion-18 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-18:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-1 {
  vertical-align: baseline;
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.emotion-24 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-24.uc-fe-input-block {
  display: block;
}

.emotion-24 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-24 input,
.emotion-24 input:hover,
.emotion-24 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-24:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-24 input {
  line-height: 26px;
  height: 26px;
}

.emotion-24 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-24 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-24 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-24 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-8 {
  display: table;
  width: 100%;
}

.emotion-12 {
  position: relative;
}

.emotion-12 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.emotion-12 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 8px;
}

.emotion-12 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.emotion-12 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.emotion-4 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-4:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-10 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 24px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-10.uc-fe-input-block {
  display: block;
}

.emotion-10 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-10 input,
.emotion-10 input:hover,
.emotion-10 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-10:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-10 input {
  line-height: 22px;
  height: 22px;
}

.emotion-10 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine emotion-12 emotion-13"
      spacing="sm"
    >
      <div
        class="uc-fe-combine-controller emotion-6 emotion-7"
      >
        <div>
          <button
            class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border emotion-3 emotion-4 emotion-5"
            type="button"
          >
            <div>
              请选择
            </div>
            <i
              class="uc-fe-icon icon__down emotion-0 emotion-1 emotion-2"
            />
          </button>
        </div>
      </div>
      <span
        class="uc-fe-input uc-fe-combine-controller emotion-10 emotion-11"
      >
        <span
          class="emotion-8 emotion-9"
        >
          <input />
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine emotion-26 emotion-13"
      spacing="md"
    >
      <div
        class="uc-fe-combine-controller test_cls emotion-6 emotion-7"
      >
        <div>
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-3 emotion-18 emotion-5"
            type="button"
          >
            <div>
              请选择
            </div>
            <i
              class="uc-fe-icon icon__down emotion-0 emotion-1 emotion-2"
            />
          </button>
        </div>
      </div>
      <span
        class="uc-fe-input uc-fe-combine-controller test_cls emotion-24 emotion-11"
      >
        <span
          class="emotion-8 emotion-9"
        >
          <input />
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Combine demo -- spacing 1`] = `
.emotion-6 {
  position: relative;
}

.emotion-6 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.emotion-6 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 12px;
}

.emotion-6 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.emotion-6 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.emotion-62 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.emotion-60 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-60:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-57 {
  vertical-align: baseline;
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-2.uc-fe-input-block {
  display: block;
}

.emotion-2 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-2 input,
.emotion-2 input:hover,
.emotion-2 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-2:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-2 input {
  line-height: 26px;
  height: 26px;
}

.emotion-2 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 {
  display: table;
  width: 100%;
}

.emotion-68 {
  position: relative;
}

.emotion-68 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.emotion-68 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: -1px;
}

.emotion-68 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.emotion-68 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.emotion-4 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-4:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.emotion-14 {
  position: relative;
}

.emotion-14 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.emotion-14 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 8px;
}

.emotion-14 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.emotion-14 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.emotion-10 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 24px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-10.uc-fe-input-block {
  display: block;
}

.emotion-10 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-10 input,
.emotion-10 input:hover,
.emotion-10 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-10:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-10 input {
  line-height: 22px;
  height: 22px;
}

.emotion-10 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-12 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-12:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.emotion-26 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 32px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-26.uc-fe-input-block {
  display: block;
}

.emotion-26 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-26 input,
.emotion-26 input:hover,
.emotion-26 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-26:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-26 input {
  line-height: 30px;
  height: 30px;
}

.emotion-26 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-26 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-26 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-26 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-28 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 32px;
  padding: 0 12px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-28:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.emotion-76 {
  position: relative;
}

.emotion-76 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.emotion-76 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 40px;
}

.emotion-76 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.emotion-76 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.emotion-6 {
  position: relative;
}

.emotion-6 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.emotion-6 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 12px;
}

.emotion-6 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.emotion-6 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.emotion-62 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.emotion-60 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-60:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-57 {
  vertical-align: baseline;
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-2.uc-fe-input-block {
  display: block;
}

.emotion-2 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-2 input,
.emotion-2 input:hover,
.emotion-2 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-2:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-2 input {
  line-height: 26px;
  height: 26px;
}

.emotion-2 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 {
  display: table;
  width: 100%;
}

.emotion-68 {
  position: relative;
}

.emotion-68 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.emotion-68 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: -1px;
}

.emotion-68 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.emotion-68 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.emotion-4 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-4:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.emotion-14 {
  position: relative;
}

.emotion-14 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.emotion-14 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 8px;
}

.emotion-14 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.emotion-14 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.emotion-10 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 24px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-10.uc-fe-input-block {
  display: block;
}

.emotion-10 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-10 input,
.emotion-10 input:hover,
.emotion-10 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-10:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-10 input {
  line-height: 22px;
  height: 22px;
}

.emotion-10 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-12 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-12:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.emotion-26 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 32px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-26.uc-fe-input-block {
  display: block;
}

.emotion-26 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-26 input,
.emotion-26 input:hover,
.emotion-26 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-26:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-26 input {
  line-height: 30px;
  height: 30px;
}

.emotion-26 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-26 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-26 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-26 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-28 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 32px;
  padding: 0 12px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-28:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.emotion-76 {
  position: relative;
}

.emotion-76 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.emotion-76 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 40px;
}

.emotion-76 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.emotion-76 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

<div>
  <div>
    <h3>
      spacing: smart
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="uc-fe-combine emotion-6 emotion-7"
        spacing="md"
      >
        <span
          class="uc-fe-input uc-fe-combine-controller emotion-2 emotion-3"
        >
          <span
            class="emotion-0 emotion-1"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary uc-fe-combine-controller emotion-4 emotion-5"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <div>
    <h3>
      spacing: smart - sm
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="uc-fe-combine emotion-14 emotion-7"
        spacing="sm"
      >
        <span
          class="uc-fe-input uc-fe-combine-controller emotion-10 emotion-3"
        >
          <span
            class="emotion-0 emotion-1"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-primary uc-fe-combine-controller emotion-12 emotion-5"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <div>
    <h3>
      spacing: smart - md
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="uc-fe-combine emotion-6 emotion-7"
        spacing="md"
      >
        <span
          class="uc-fe-input uc-fe-combine-controller emotion-2 emotion-3"
        >
          <span
            class="emotion-0 emotion-1"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary uc-fe-combine-controller emotion-4 emotion-5"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <div>
    <h3>
      spacing: smart - lg
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="uc-fe-combine emotion-6 emotion-7"
        spacing="lg"
      >
        <span
          class="uc-fe-input uc-fe-combine-controller emotion-26 emotion-3"
        >
          <span
            class="emotion-0 emotion-1"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-primary uc-fe-combine-controller emotion-28 emotion-5"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <div>
    <h3>
      spacing: sm
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="uc-fe-combine emotion-14 emotion-7"
        spacing="sm"
      >
        <span
          class="uc-fe-input uc-fe-combine-controller emotion-2 emotion-3"
        >
          <span
            class="emotion-0 emotion-1"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary uc-fe-combine-controller emotion-4 emotion-5"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <div>
    <h3>
      spacing: md
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="uc-fe-combine emotion-6 emotion-7"
        spacing="md"
      >
        <span
          class="uc-fe-input uc-fe-combine-controller emotion-2 emotion-3"
        >
          <span
            class="emotion-0 emotion-1"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary uc-fe-combine-controller emotion-4 emotion-5"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <div>
    <h3>
      spacing: lg
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="uc-fe-combine emotion-6 emotion-7"
        spacing="lg"
      >
        <span
          class="uc-fe-input uc-fe-combine-controller emotion-2 emotion-3"
        >
          <span
            class="emotion-0 emotion-1"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary uc-fe-combine-controller emotion-4 emotion-5"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <h3>
    spacing: compact
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine emotion-68 emotion-7"
      spacing="compact"
    >
      <div
        class="uc-fe-combine-controller emotion-62 emotion-63"
      >
        <div>
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-59 emotion-60 emotion-5"
            type="button"
          >
            <div>
              请选择
            </div>
            <i
              class="uc-fe-icon icon__down emotion-56 emotion-57 emotion-58"
            />
          </button>
        </div>
      </div>
      <span
        class="uc-fe-input uc-fe-combine-controller emotion-2 emotion-3"
      >
        <span
          class="emotion-0 emotion-1"
        >
          <input />
        </span>
      </span>
    </div>
  </div>
  <h3>
    spacing: custom
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine emotion-76 emotion-7"
      spacing="40px"
    >
      <span
        class="uc-fe-input uc-fe-combine-controller emotion-2 emotion-3"
      >
        <span
          class="emotion-0 emotion-1"
        >
          <input />
        </span>
      </span>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary uc-fe-combine-controller emotion-4 emotion-5"
        type="button"
      >
        按钮
      </button>
    </div>
  </div>
</div>
`;
